deploy/streamlit.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoq-lb
spec:
  selector:
    component: autoq
  ports:
    - port: 8501
      targetPort: 8501
  type: LoadBalancer
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: autoq-streamlit-service
# spec:
#   type: ClusterIP
#   selector:
#     component: autoq
#   ports:
#     - port: 8501
#       targetPort: 8501
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoq
spec:
  replicas: 1
  selector:
    matchLabels:
      component: autoq
  template:
    metadata:
      labels:
        component: autoq
    spec:
      imagePullSecrets:
        - name: all-icr-io
      containers:
        - name: autoq
          image: us.icr.io/aimodelfactory/autoq:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
