deploy/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoq-ingress
  annotations:
    route.openshift.io/termination: "edge"
spec:
  tls:
    - hosts:
        - modelfactory-9ca4d14d48413d18ce61b80811ba4308-0000.us-south.containers.appdomain.cloud
      secretName: modelfactory-9ca4d14d48413d18ce61b80811ba4308-0000
  rules:
    - host: autoq.modelfactory-9ca4d14d48413d18ce61b80811ba4308-0000.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoq-streamlit-service
                port:
                  number: 8501
